# modeling-lab

./: .gitignore  LICENSE  README.md  pyproject.toml
ml/algorithmic_grokking/lab1/: README.md  RESULTS.md  train.py
ml/algorithmic_grokking/lab1/runs/: very_long_wd_0.5_p31.csv
ml/deep-learning/algorithmic-grokking/lab1/: README.md  RESULTS.md
ml/deep-learning/algorithmic-grokking/lab1/runs/: long_wd_0.2_p31.csv  long_wd_0.3_p31.csv  long_wd_0.5_p31.csv
ml/deep-learning/parameter-efficient-finetuning/lab1/: README.md
ml/deep-learning/parameter-efficient-finetuning/lab1/model-info/qwen3.5-2b-base/: README.md  WEIGHTS.md  config.json  model.safetensors.index.json  tokenizer_config.json  video_preprocessor_config.json
src/modeling_lab/: __init__.py
