[project]
name = "modeling-lab"
version = "0.1.0"
description = "A hands-on lab for modeling real problems with math, data, and machine learning."
requires-python = ">=3.12"
dependencies = []

[project.scripts]
modeling-lab = "modeling_lab:main"

[build-system]
requires = ["uv_build>=0.11.21,<0.12.0"]
build-backend = "uv_build"
